# scoutrss

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
scoutrss/: __init__.py  socutrss.py
scoutrss/storage/: __init__.py  adapter.py  file.py  memory.py  mongo.py
tests/: test.ipynb  test_scoutrss.py  test_storage.py
