[project]
name = "scoutrss"
dynamic = ["version"]
description = "A library for watching RSS feeds and notifying when new entries are available"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Adnan Ahmad", email = "viperadnan@gmail.com" }]
requires-python = ">=3.8"
keywords = ["rss", "feed", "watcher", "scheduler", "notifications"]
dependencies = [
    "APScheduler>=3.8.0",
    "feedparser>=6.0.8",
    "pickledb>=0.9.2",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[project.urls]
Homepage = "https://github.com/viperadnan-git/scoutrss"
Repository = "https://github.com/viperadnan-git/scoutrss"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "scoutrss/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["scoutrss"]

[tool.isort]
multi_line_output = 3

[dependency-groups]
dev = [
    "autoflake>=2.0",
    "black>=24.8.0",
    "isort>=5.13.2",
]
