[project]
name = "scoutrss"
dynamic = ["version"]
description = "A library for watching RSS feeds and notifying when new entries are available"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Adnan Ahmad", email = "viperadnan@gmail.com" }]
requires-python = ">=3.8"
keywords = ["rss", "feed", "watcher", "scheduler", "notifications"]
dependencies = [
    "feedparser>=6.0.8",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[project.optional-dependencies]
scheduler = ["APScheduler>=3.8.0"]
mongo = ["pymongo>=4.0"]
all = ["scoutrss[scheduler,mongo]"]

[project.urls]
Homepage = "https://github.com/viperadnan-git/scoutrss"
Repository = "https://github.com/viperadnan-git/scoutrss"

# --- Build ---

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "scoutrss/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["scoutrss"]

# --- Linting ---

[tool.ruff]
exclude = ["scoutrss/_version.py"]

[tool.ruff.lint]
select = ["F", "I"]  # pyflakes + isort
fixable = ["F401", "I"]

# --- Dev dependencies ---

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.1",
    "ruff>=0.15.4",
]
